Palette component now has its full functionality!

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
     "no-unused-vars": [
       "error",
       {
-        "varsIgnorePattern": "[rR]eact||[A-Z][\\w]+||props"
+        "varsIgnorePattern": "[rR]eact||[A-Z][\\w]+||props||_"
       }
     ]
   }
