--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,10 @@
 {
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
   "env": {
     "browser": true,
     "es6": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended", "react:recommended"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -12,17 +12,18 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "jsx-a11y"],
+  "plugins": ["react", "jsx-a11y", "react-hooks"],
   "rules": {
-    "indent": ["error", 2],
+    "indent": ["warn", 2],
     "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
-    "semi": ["error", "always"],
     "no-unused-vars": [
       "error",
       {
-        "varsIgnorePattern": "[rR]eact||[A-Z][\\w]+||props||_"
+        "varsIgnorePattern": "[rR]eact||[A-Z][\\w]+||props||_||Wrapped"
       }
-    ]
+    ],
+    "react/jsx-fragments": ["error", "syntax"],
+    "react-hooks/rules-of-hooks": "error"
   }
 }
