--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "polished": "^3.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,10 +27,19 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/node": "^11.13.8",
+    "@types/react": "^16.8.14",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.8",
+    "@types/styled-components": "^4.1.14",
     "babel-eslint": "^10.0.1",
-    "node-sass": "^4.11.0",
+    "babel-plugin-polished": "^1.1.0",
+    "babel-plugin-styled-components": "^1.10.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "node-sass": "^4.12.0",
     "prettier-eslint": "^8.8.2",
     "prettier-stylelint": "^0.4.2",
-    "stylelint": "^9.10.1"
+    "stylelint": "^9.10.1",
+    "typescript": "^3.4.5"
   }
 }
