--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immer": "^3.1.1",
     "polished": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-react-hooks": "^0.6.1",
     "styled-components": "^4.2.0"
   },
   "scripts": {
